@startuml

title __ISP SOLUTION 1's Class Diagram__\n

  namespace com.company {
    interface com.company.IUser1Operations {
    }
  }
  

  namespace com.company {
    interface com.company.IUser2Operations {
    }
  }
  

  namespace com.company {
    interface com.company.IUser3Operations {
    }
  }
  

  namespace com.company {
    class com.company.Main {
    }
  }
  

  namespace com.company {
    abstract class com.company.Operation {
    }
  }
  

  namespace com.company {
    class com.company.User1Operation {
    }
  }
  

  namespace com.company {
    class com.company.User2Operation {
    }
  }
  

  namespace com.company {
    class com.company.User3Operaion {
    }
  }
  

  com.company.User1Operation .up.|> com.company.IUser1Operations
  com.company.User1Operation -up-|> com.company.Operation
  com.company.User2Operation .up.|> com.company.IUser2Operations
  com.company.User2Operation -up-|> com.company.Operation
  com.company.User3Operaion .up.|> com.company.IUser3Operations
  com.company.User3Operaion -up-|> com.company.Operation


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
